--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -65,7 +65,7 @@
 
         if('ontouchstart' in document.documentElement) document.write("<script src='assets/js/jquery.mobile.custom.min.js'>"+"<"+"/script>");
     </script>
-
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
 </head>
 <body>
 <noscript>
