--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -66,6 +66,7 @@
         if('ontouchstart' in document.documentElement) document.write("<script src='assets/js/jquery.mobile.custom.min.js'>"+"<"+"/script>");
     </script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="<%= BASE_URL %>static/js/toast.js"></script>
 </head>
 <body>
 <noscript>
