--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -70,7 +70,7 @@
     <script src="<%= BASE_URL %>static/js/toast.js"></script>
     <script src="<%= BASE_URL %>static/js/confirm.js"></script>
     <!--  loading等待框  -->
-    <script src="https://cdn.bootcss.com/jquery.blockUI/2.70.0-2014.11.23/jquery.blockUI.min.js"></script>
+    <script src="<%= BASE_URL %>static/js/jquery.blockUI.min.js"></script>
     <script src="<%= BASE_URL %>static/js/loading.js"></script>
     <!--  通用工具类  -->
     <script src="<%= BASE_URL %>static/js/tool.js"></script>
