1. 枚举字段，表格显示中文，表单显示下拉框 2. vue中增加过滤器 3. 增加枚举常量 4. 增加枚举生成器EnumGenerator 5. optionKV过滤器从list改为object

--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -76,6 +76,8 @@
     <script src="<%= BASE_URL %>static/js/tool.js"></script>
     <!--  校验类  -->
     <script src="<%= BASE_URL %>static/js/validator.js"></script>
+    <!--  枚举常量  -->
+    <script src="<%= BASE_URL %>static/js/enums.js"></script>
 
 </head>
 <body>
