1. 课程管理与大章管理互相跳转

--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -78,6 +78,10 @@
     <script src="<%= BASE_URL %>static/js/validator.js"></script>
     <!--  枚举常量  -->
     <script src="<%= BASE_URL %>static/js/enums.js"></script>
+    <!--  h5缓存  -->
+    <script src="<%= BASE_URL %>static/js/session-storage.js"></script>
+    <script src="<%= BASE_URL %>static/js/local-storage.js"></script>
+
 
 </head>
 <body>
