1. 完成课程内容管理功能 2. 利用setInterval完成自动保存功能 3. 增加js日期格式化方法

--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -31,6 +31,8 @@
     <!--  zTree jquery树插件  -->
     <link rel="stylesheet" href="<%= BASE_URL %>zTree_v3/css/zTreeStyle/zTreeStyle.css" type="text/css">
 
+    <!--  富文本编辑器  -->
+    <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote.min.css" rel="stylesheet">
 
     <!-- HTML5shiv and Respond.js for IE8 to support HTML5 elements and media queries -->
 
@@ -88,6 +90,8 @@
     <!--  zTree jquery树插件  -->
     <script src="<%= BASE_URL %>zTree_v3/js/jquery.ztree.core.min.js"></script>
     <script src="<%= BASE_URL %>zTree_v3/js/jquery.ztree.excheck.min.js"></script>
+    <!--  富文本编辑器  -->
+    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote.min.js"></script>
 
 </head>
 <body>
