--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -33,7 +33,8 @@
 
     <!--  富文本编辑器  -->
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote.min.css" rel="stylesheet">
-
+    <!--  引入上下居中字体css  -->
+    <link rel="stylesheet" href="<%= BASE_URL %>static/css/style.css" type="text/css">
     <!-- HTML5shiv and Respond.js for IE8 to support HTML5 elements and media queries -->
 
     <!--[if lte IE 8]>
@@ -92,6 +93,7 @@
     <script src="<%= BASE_URL %>zTree_v3/js/jquery.ztree.excheck.min.js"></script>
     <!--  富文本编辑器  -->
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote.min.js"></script>
+
 
 </head>
 <body>
