--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -93,8 +93,8 @@
     <script src="<%= BASE_URL %>zTree_v3/js/jquery.ztree.excheck.min.js"></script>
     <!--  富文本编辑器  -->
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote.min.js"></script>
-    <!--  MD5工具类 -->
-    <script src="<%= BASE_URL %>staic/js/md5.js"></script>
+    <!--  md5工具类  -->
+    <script src="<%= BASE_URL %>static/js/md5.js"></script>
 
 
 </head>
