--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -95,6 +95,9 @@
     <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote.min.js"></script>
     <!--  md5工具类  -->
     <script src="<%= BASE_URL %>static/js/md5.js"></script>
+    <!--  进度条工具类  -->
+    <script src="<%= BASE_URL %>static/js/progress.js"></script>
+
 
 
 </head>
