1. 视频加密与授权播放：集成阿里云播放器，制作player播放器组件

--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -33,6 +33,10 @@
 
     <!--  富文本编辑器  -->
     <link href="https://cdn.jsdelivr.net/npm/summernote@0.8.15/dist/summernote.min.css" rel="stylesheet">
+
+    <!--  阿里云播放器  -->
+    <link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.8.2/skins/default/aliplayer-min.css"/>
+
     <!--  引入上下居中字体css  -->
     <link rel="stylesheet" href="<%= BASE_URL %>static/css/style.css" type="text/css">
     <!-- HTML5shiv and Respond.js for IE8 to support HTML5 elements and media queries -->
