--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta charset="utf-8"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Login Page - Ace Admin</title>
 
-    <meta name="description" content="User login page" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <meta name="description" content="User login page"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
 
     <!-- bootstrap & fontawesome -->
-    <link rel="stylesheet" href="<%= BASE_URL %>ace/assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="<%= BASE_URL %>ace/assets/font-awesome/4.5.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="<%= BASE_URL %>ace/assets/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="<%= BASE_URL %>ace/assets/font-awesome/4.5.0/css/font-awesome.min.css"/>
 
     <!-- text fonts -->
-    <link rel="stylesheet" href="<%= BASE_URL %>ace/assets/css/fonts.googleapis.com.css" />
+    <link rel="stylesheet" href="<%= BASE_URL %>ace/assets/css/fonts.googleapis.com.css"/>
 
     <!-- ace styles -->
-    <link rel="stylesheet" href="<%= BASE_URL %>ace/assets/css/ace.min.css" />
+    <link rel="stylesheet" href="<%= BASE_URL %>ace/assets/css/ace.min.css"/>
 
     <!--[if lte IE 9]>
-    <link rel="stylesheet" href="<%= BASE_URL %>ace/assets/css/ace-part2.min.css" />
+    <link rel="stylesheet" href="<%= BASE_URL %>ace/assets/css/ace-part2.min.css"/>
     <![endif]-->
-    <link rel="stylesheet" href="<%= BASE_URL %>ace/assets/css/ace-rtl.min.css" />
+    <link rel="stylesheet" href="<%= BASE_URL %>ace/assets/css/ace-rtl.min.css"/>
 
     <!--[if lte IE 9]>
-    <link rel="stylesheet" href="<%= BASE_URL %>ace/assets/css/ace-ie.min.css" />
+    <link rel="stylesheet" href="<%= BASE_URL %>ace/assets/css/ace-ie.min.css"/>
 
     <![endif]-->
     <!--  zTree jquery树插件  -->
@@ -74,7 +74,7 @@
     <script src="<%= BASE_URL %>ace/assets/js/ace.min.js"></script>
     <script type="text/javascript">
 
-        if('ontouchstart' in document.documentElement) document.write("<script src='assets/js/jquery.mobile.custom.min.js'>"+"<"+"/script>");
+      if ('ontouchstart' in document.documentElement) document.write("<script src='assets/js/jquery.mobile.custom.min.js'>" + "<" + "/script>");
     </script>
     <!--  确认框和提示框  -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
@@ -101,13 +101,16 @@
     <script src="<%= BASE_URL %>static/js/md5.js"></script>
     <!--  进度条工具类  -->
     <script src="<%= BASE_URL %>static/js/progress.js"></script>
-
+    <!--  阿里云播放器  -->
+    <script charset="utf-8" type="text/javascript"
+            src="https://g.alicdn.com/de/prismplayer/2.8.2/aliplayer-min.js"></script>
 
 
 </head>
 <body>
 <noscript>
-    <strong>We're sorry but admin doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+    <strong>We're sorry but admin doesn't work properly without JavaScript enabled. Please enable it to
+        continue.</strong>
 </noscript>
 <div id="app"></div>
 <!-- built files will be auto injected -->
