--- a/web/public/index.html
+++ b/web/public/index.html
@@ -12,6 +12,7 @@
             integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
             crossorigin="anonymous"></script>
     <script src="<%= BASE_URL %>bootstrap-4.4.1/js/bootstrap.bundle.min.js"></script>
+    <script src="https://use.fontawesome.com/ed8edb616a.js"></script>
     <title>在线视频课程系统</title>
 </head>
 <body>
