--- a/web/public/index.html
+++ b/web/public/index.html
@@ -10,11 +10,15 @@
     <link rel="stylesheet" href="<%= BASE_URL %>static/css/style.css">
     <script src="<%= BASE_URL %>static/js/enums.js"></script>
     <script src="<%= BASE_URL %>static/js/tool.js"></script>
+    <!--  阿里云播放器  -->
+    <link rel="stylesheet" href="https://g.alicdn.com/de/prismplayer/2.8.2/skins/default/aliplayer-min.css"/>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.slim.min.js"
             integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
             crossorigin="anonymous"></script>
     <script src="<%= BASE_URL %>bootstrap-4.4.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://use.fontawesome.com/ed8edb616a.js"></script>
+    <!--  阿里云播放器  -->
+    <script charset="utf-8" type="text/javascript" src="https://g.alicdn.com/de/prismplayer/2.8.2/aliplayer-min.js"></script>
     <title>在线视频课程系统</title>
 </head>
 <body>
