--- a/web/public/index.html
+++ b/web/public/index.html
@@ -19,6 +19,9 @@
     <script src="https://use.fontawesome.com/ed8edb616a.js"></script>
     <!--  阿里云播放器  -->
     <script charset="utf-8" type="text/javascript" src="https://g.alicdn.com/de/prismplayer/2.8.2/aliplayer-min.js"></script>
+    <!--  确认框和提示框  -->
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="<%= BASE_URL %>static/js/toast.js"></script>
     <title>在线视频课程系统</title>
 </head>
 <body>
