feat: 会员登录注册功能开发，注册时发送验证码前，增加手机号校验；手机号输入框失去焦点时，校验手机号

--- a/web/public/index.html
+++ b/web/public/index.html
@@ -31,6 +31,9 @@
     <script src="<%= BASE_URL %>static/js/session-storage.js"></script>
     <script src="<%= BASE_URL %>static/js/local-storage.js"></script>
 
+    <!--  正则表达式校验  -->
+    <script src="<%= BASE_URL %>static/js/pattern.js"></script>
+
     <title>在线视频课程系统</title>
 </head>
 <body>
