--- a/admin/public/index.html
+++ b/admin/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="html">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <meta charset="utf-8"/>
@@ -108,6 +108,7 @@
 
 </head>
 <body>
+
 <noscript>
     <strong>We're sorry but admin doesn't work properly without JavaScript enabled. Please enable it to
         continue.</strong>
@@ -115,4 +116,9 @@
 <div id="app"></div>
 <!-- built files will be auto injected -->
 </body>
+<style>
+    .html {
+        background: linear-gradient(to bottom, #00F5A0, #00D9F5);
+    }
+</style>
 </html>
